deploy/kubernetes/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: trustcloud
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: vault
  ports:
    - name: https
      port: 8200
      targetPort: https
